# bagamba-bot

./: .gitignore  BOT_LOGIC.md  Dockerfile  docker-compose.yml  main.py
.github/workflows/: deploy.yml
bagamba/: bot.py  config.py  database.py  db_manager.py  duty_manager.py  get_channel_ids.py  get_user_ids.py  incident_manager.py  jira_client.py  jira_info.py  main.py  notification_manager.py  notification_worker.py  pyproject.toml  redis_cli.py  redis_scheduler.py  server.py
ops/: docker-compose.yml
